--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
+    "@icon-park/react": "^1.4.2",
     "axios": "^1.13.2",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
