--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^11.0.8",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.344.0",
+    "rc-slider": "^11.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
